# rbd_packages

./: LICENSE  README.md
rbd_local/: README.md
rbd_local/GUI/: gui.py
rbd_local/utilities/: README.md  mount_sshfs.sh  rbd_ros_master.exp  rbd_startup.sh
rbd_local/zhaw_ba_robodog/: app.py  commandexec.py  gestrec.py  requirements.txt  ros-hello-world.py  tests.py
rbd_local/zhaw_ba_robodog/auxillary_funcs/: cam_access.py  ssh_access.py
rbd_local/zhaw_ba_robodog/ui/: control_window_ui.py  res_rc.py  start_window_ui.py
rbd_ros/: LICENSE  README.md
rbd_ros/pointcloud_to_laserscan/config/: viz_pointcloud_to_laserscan.rviz
rbd_ros/pointcloud_to_laserscan_141/launch/: rbd_pointcloud_to_laserscan.launch
rbd_ros/rbd_controller/: CMakeLists.txt  README.md  package.xml
rbd_ros/rbd_controller/config/: default.yaml  zed_rviz.rviz
rbd_ros/rbd_controller/include/rbd_controller/: RbdController.hpp
rbd_ros/rbd_controller/launch/: rbd_controller.launch  rbd_record.launch  test_control.launch  test_slam.launch  test_state_machine.launch
rbd_ros/rbd_controller/src/: RbdController.cpp  rbd_controller_node.cpp
rbd_ros/rbd_controller_template/: CMakeLists.txt  README.md  package.xml
rbd_ros/rbd_controller_template/config/: default.yaml
rbd_ros/rbd_controller_template/include/rbd_controller_template/: RbdControllerTemplate.hpp
rbd_ros/rbd_controller_template/launch/: rbd_controller_template.launch
rbd_ros/rbd_controller_template/src/: RbdControllerTemplate.cpp
rbd_ros/rbd_gestrec_py/: CMakeLists.txt  package.xml  setup.py
rbd_ros/rbd_gestrec_py/src/: gestrec.py
rbd_ros/rbd_lidar/: CMakeLists.txt  README.md  package.xml
rbd_ros/rbd_lidar/config/: default.yaml  metadata.json  metadata_2048.json  rviz_rect_decent.rviz  rviz_rect_rainbow.rviz
rbd_ros/rbd_lidar/include/rbd_controller_template/: RbdControllerTemplate.hpp
rbd_ros/rbd_lidar/include/rbd_lidar/: RbdLidar.hpp
rbd_ros/rbd_lidar/launch/: ouster_record.launch  ouster_replay.launch  rbd_controller_template.launch  rbd_lidar.launch  rbd_lidar_local.launch  rbd_pointcloud_to_laserscan.launch
rbd_ros/rbd_lidar/src/: RbdControllerTemplate (copy).cpp  RbdControllerTemplate.cpp  RbdLidar.cpp  RbdLidar_temp.cpp  rbd_lidar_node.cpp
rbd_ros/rbd_lidar/src/csv/: range_list.csv
rbd_ros/rbd_lidar/src/wp/: RbdControllerTemplate_csv_vis.cpp  RbdControllerTemplate_pcl_ranges_print.cpp  RbdControllerTemplate_test_conversion.cpp  RbdControllerTemplate_time_measurements.cpp
rbd_ros/rbd_localization/: CMakeLists.txt  README.md  package.xml
rbd_ros/rbd_localization/config/: default.yaml  localization.yaml  localization_backup.yaml
rbd_ros/rbd_localization/include/rbd_localization/: RbdLocalization.hpp
rbd_ros/rbd_localization/launch/: rbd_localization.launch  tf.launch
rbd_ros/rbd_localization/src/: RbdLocalization.cpp  rbd_localization_node.cpp
rbd_ros/rbd_msgs/: CMakeLists.txt
rbd_ros/rbd_msgs/msg/: NamedPoses.msg
rbd_ros/rbd_msgs/srv/: GeneratePath.srv  SetPosition.srv
rbd_ros/rbd_navigation/: CMakeLists.txt  LICENSE  README.md  package.xml
rbd_ros/rbd_navigation/config/: default.yaml  rqt_multiplot.xml
rbd_ros/rbd_navigation/include/rbd_navigation/: RbdNavigation.hpp
rbd_ros/rbd_navigation/launch/: rbd_navigation.launch
rbd_ros/rbd_navigation/src/: RbdNavigation.cpp  rbd_navigation_node.cpp
rbd_ros/rbd_pos_controller/: CMakeLists.txt  README.md  package.xml
rbd_ros/rbd_pos_controller/config/: default.yaml
rbd_ros/rbd_pos_controller/include/rbd_pos_controller/: RbdPosController.hpp
rbd_ros/rbd_pos_controller/launch/: rbd_pos_controller.launch
rbd_ros/rbd_pos_controller/src/: RbdPosController.cpp  rbd_pos_controller_node.cpp
rbd_ros/rbd_template/src/: rbd_controller_template_node.cpp
rbd_ros_local/: README.md
rbd_ros_local/rbd_gestrec_py/: CMakeLists.txt  package.xml  setup.py
rbd_ros_local/rbd_gestrec_py/config/: lidar.rviz
rbd_ros_local/rbd_gestrec_py/launch/: launch_gestrec.launch  rbd_local.launch  rbd_replay.launch
rbd_ros_local/rbd_gestrec_py/src/: README.txt  gestrec_node.py
rbd_ros_local/rbd_gestrec_py/srv/: getLastGesture.srv
rbd_ros_local/rbd_msgs/: CMakeLists.txt  LICENSE  README.md  package.xml
rbd_ros_local/rbd_msgs/srv/: GeneratePath.srv
