<?xml version="1.0"?>
<package format="2">
  <name>rbd_lidar</name>
  <version>0.1.0</version>
  <description>A template for ROS packages.</description>
  <maintainer email="schwed02@students.zhaw.ch">Daniel Schweizer</maintainer>
  <license>BSD</license>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend: dependencies only used in source files -->
  <build_depend>boost</build_depend>
  
  <!-- depend: build, export, and execution dependency -->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>eigen3</depend>
  <depend>roslint</depend>

  <!-- # only required for pcl conversion (for MATLAB plot) -->
  <!-- <depend>pcl_ros</depend>		 -->


</package>
