<?xml version="1.0"?>
<package format="2">
  <name>rbd_localization</name>
  <version>0.1.0</version>
  <description>A template for ROS packages.</description>
  <maintainer email="pfammjur@students.zhaw.ch">Juri Pfammatter</maintainer>
  <license>BSD</license>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend: dependencies only used in source files -->
  <build_depend>boost</build_depend>
  
  <!-- depend: build, export, and execution dependency -->
  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>unitree_legged_msgs</depend>
  <depend>tf</depend>

  <build_depend>roslint</build_depend>
</package>
