<?xml version="1.0"?>
<package format="2">
  <name>rbd_msgs</name>

  <description>rbd_msgs package</description>
  <version>0.1.0</version>
  <maintainer email="pfammjur@students.zhaw.ch">Juri Pfammatter</maintainer>
  <author>Juri Pfammatter</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
</package>